2005-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* stap.1.in: Clarify absence of short-circuiting in && and ||.
	* translate.cxx (emit_function): Improve "array locals" message.
	* tapset/timestamp.stp: Add gettimeofday_us function.  Correct
	arithmetic typing in other functions.
	* stapfuncs.5.in: Document new function.

2005-09-06  Martin Hunt  <hunt@redhat.com>

	* systemtap.spec.in: Bump elfutils_version to .115.

2005-09-05  Roland McGrath  <roland@redhat.com>

	* loc2c.h: Comment fix.

2005-09-06  Frank Ch. Eigler  <fche@elastic.org>

	* configure.ac: Require elfutils 0.115+.
	* tapsets.cxx: Restore graydon's PR 1244 code.
	* testsuite/buildok/eighteen.stp: Correct typing.
	* configure: Regenerated.

2005-09-06  Martin Hunt  <hunt@redhat.com>

	* tapset/context.stp: Add function target().
	* stapfuncs.5.in (target): Document it.
	* elaborate.h (struct systemtap_session): Add cmd and target_pid to
	the struct.
	* main.cxx (usage): Add descriptions of "-c" and "-x" options.
	(main): Set s.cmd and s.target_pid.
	* buildrun.cxx (stringify): Copy this utility func here too.
	(run_pass): Add new options to set cmd and pid to the stpd
	command line.

2005-09-06  Frank Ch. Eigler  <fche@redhat.com>

	* tapsets.cxx (emit_probe_entries): Disable fault_handler for now.

2005-09-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1289
	* translate.cxx (lex_cast_qstring): Correct "cast" of object
	to string containing more than one word.
	* tapset.cxx (lex_cast_qstring): Ditto.
	(dwarf_derived_module::emit_probe_entries): Emit and use
	a generic fault_handler.

2005-09-05  Frank Ch. Eigler  <fche@elastic.org>

	PR 1172.
	* staptree.h, staptree.cxx: Make all ::print*(), operator<<
	functions take const staptree objects.
	(literal_string::print): \-prefix double-quotes.
	* translate.cxx (emit_common_header): Add context probe_point field.
	Switch to atomic_t busy flags.
	(emit_module_exit): Use atomic operations for busy flag.