@@ -1,3 +1,7 @@
+2005-09-07  Frank Ch. Eigler  <fche@redhat.com>
+
+	* stap.1.in: Oops, && and || do short-circuit.
+
 2005-09-06  Frank Ch. Eigler  <fche@elastic.org>
 
 	* stap.1.in: Clarify absence of short-circuiting in && and ||.
